--- a/labo5-http-code-java/pom.xml
+++ b/labo5-http-code-java/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -52,5 +57,3 @@
 
 
 </project>
-
-
